--- a/09_story_by_data.ipynb
+++ b/09_story_by_data.ipynb
@@ -11,6 +11,8 @@
     "Учебная работа. Самостоятельный исследовательский проект в рамках курса \"Аналитик данных\" Яндекс.Практикума.  \n",
     "Спринт 9: \"Как рассказать историю с помощью данных\"\n",
     "\n",
+    "Без output (не сохранился файл с данными)\n",
+    " \n",
     "## Общая информация о проекте\n",
     "### Описание задания\n",
     "Есть открытые данные о заведениях общественного питания в Москве. Нужно проанализировать текущее положение на рынке общественного питания в Москве и дать рекомендации о том, какой тип заведения, количество посадочных мест и район расположения лучше выбрать инвесторам.\n",
