--- a/10_project_2.ipynb
+++ b/10_project_2.ipynb
@@ -10,6 +10,8 @@
     "Учебная работа. Самостоятельный исследовательский проект в рамках курса \"Аналитик данных\" Яндекс.Практикума  \n",
     "Спринт 10. Сборный проект №2.\n",
     "\n",
+    "Без output (не сохранился файл с данными)\n",
+    " \n",
     "## Общая информация о проекте\n",
     "### Описание задания\n",
     "Нужно изучить поведение пользователей мобильного приложения интернет-магазина продуктов питания. Проанализировать результаты А/А/В теста и сделать выводы о том, какой шрифт лучше (старый или новый). \n",
