--- a/07_business_indicators.ipynb
+++ b/07_business_indicators.ipynb
@@ -9,6 +9,8 @@
     "Учебная работа. Самостоятельный исследовательский проект в рамках курса \"Аналитик данных\" Яндекс.Практикума  \n",
     "Спринт 7 \"Анализ бизнес показателей\".\n",
     "\n",
+    "Без output (не сохранился файл с данными)\n",
+    " \n",
     "## Общая информация о проекте\n",
     "### Описание задания\n",
     "Нужно помочь маркетологам Яндекс Афиши определить, какие источники трафика менее выгодны, и как можно перераспределить бюджет, чтобы снизить расходы. Доступны данные о посещениях сайта Яндекс Афиши, заказах и статистика рекламных расходов.\n",
